# myPicasa

./: .gitignore  README.md  google_photos_takeout_browser_full_spec.md  package.json
frontend/: package-lock.json  package.json
frontend/src/: main.tsx  styles.css
frontend/src/app/: App.tsx
frontend/src/components/: DebugPanel.tsx  MediaGrid.tsx  Sidebar.tsx  Toolbar.tsx  ViewerModal.tsx
frontend/src/lib/: logger.ts  mediaSrc.ts  runtime.ts  tauri.ts  types.ts
frontend/src/state/: appState.ts
native-macos/: Package.swift  README.md
native-macos/Sources/MyPicasaNativeApp/: ContentView.swift  MyPicasaNativeApp.swift  NativeAppModel.swift  NativeThumbnailView.swift  NativeTypes.swift  ViewerSheet.swift
native-macos/Sources/my_picasaFFI/: module.modulemap  my_picasaFFI.h
scripts/: build-swift-native.sh  cleanup-bundle.mjs  run-swift-native.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  native_bridge.rs
src-tauri/src/app/: builder.rs  commands.rs  mod.rs  state.rs
src-tauri/src/cache/: mod.rs  thumb_cache.rs
src-tauri/src/db/: mod.rs  queries.rs  schema.rs
src-tauri/src/hash/: mod.rs  quick_hash.rs
src-tauri/src/import/: mod.rs  refresher.rs  scanner.rs  sidecar.rs  validator.rs
src-tauri/src/media/: thumb.rs
src-tauri/src/models/: mod.rs
src-tauri/src/search/: mod.rs  query_service.rs
src-tauri/src/util/: errors.rs  mod.rs  path.rs  time.rs
