[package]
name = "my_picasa"
version = "0.1.0"
edition = "2024"
default-run = "my_picasa"

[lib]
name = "my_picasa"
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22"
blake3 = "1.8"
chrono = { version = "0.4", features = ["serde"] }
image = { version = "0.25", default-features = true, features = ["jpeg", "png", "webp"] }
mime_guess = "2.0"
parking_lot = "0.12"
rayon = "1.11"
rusqlite = { version = "0.37", features = ["bundled", "chrono", "serde_json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.9", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.4"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uniffi = { version = "0.29", features = ["cli"] }
walkdir = "2.5"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }
